api/todo-rest-service/overlays/production/ingress/todo-alb-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todo-alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: kakeibo-app
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:048246832408:certificate/485f0f53-2666-455e-a363-0c4a7b6dd0da
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: alb-ingress
spec:
  rules:
    - host: todo.shakepiper.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: todo-service
              servicePort: 8082
